# recruiter-dev-print-ai

./: .env  .flake8  README.md  docker-compose.yml
backend/: dockerfile  pyproject.toml
backend/app/: main.py  scrape_books.py  scrape_hn.py
backend/app/src/: scrape_base.py
backend/app/test/: conftest.py  test_endpoints.py  test_fastapi.py  test_models.py  test_redis.py
frontend/: dockerfile  index.html  styles.css
frontend/src/: app.js
workflow/: n8n_workflow.json
workflows/: credentials.json  dockerfile  n8n_workflow.json
