[project]
name = "recruiter-dev-print-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Esteban",email = "acevedoesteban999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "redis (>=5.2.1,<6.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "recruiter_dev_print_ai", from = "src"}]

[virtualenvs]
in-project = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
